# git-sweep3

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  tox.ini
src/gitsweep/: cli.py
src/gitsweep/tests/: testcases.py
